--- a/mobile/package.json
+++ b/mobile/package.json
@@ -20,6 +20,7 @@
     "native-base": "^3.4.28",
     "phosphor-react-native": "^1.1.2",
     "react": "18.2.0",
+    "react-hook-form": "^7.45.1",
     "react-native": "0.71.8",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-modalize": "^2.1.1",
