--- a/mobile/package.json
+++ b/mobile/package.json
@@ -16,7 +16,9 @@
     "@react-navigation/native-stack": "^6.9.12",
     "axios": "^1.4.0",
     "expo": "~48.0.9",
+    "expo-file-system": "~15.2.2",
     "expo-font": "~11.1.1",
+    "expo-image-picker": "~14.1.1",
     "expo-status-bar": "~1.4.4",
     "native-base": "^3.4.28",
     "phosphor-react-native": "^1.1.2",
